--- a/package.json
+++ b/package.json
@@ -9,12 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.3.1",
+    "apollo-server": "^3.10.2",
+    "apollo-server-express": "^3.10.2",
+    "apollo-server-micro": "^3.10.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.0",
+    "firebase-admin": "^11.0.1",
+    "graphql": "^16.6.0",
+    "http": "^0.0.1-security",
+    "micro": "^9.4.1",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.7.15",
+    "@types/react": "^18.0.18",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5"
+    "eslint-config-next": "12.2.5",
+    "prisma": "^4.3.1",
+    "typescript": "^4.8.2"
   }
 }
